--- a/MC_max31856/TCProbe.toml
+++ b/MC_max31856/TCProbe.toml
@@ -7,24 +7,35 @@ server = "chester.local"
 DBName = "TC"
 username = "TCCollect"
 password = "magic4052"
+#  time between updates in milliseconds = 500 is one update every 1/2 second
+delayTime = "500"
+# authorization to acces token, from influx cloud DB
+authToken = "sHMevZdU_7FoHVAnnt9jtCSrLqlwgvBautxWa8S-63cUyqsNsAdegQ8VFgNwhmBXl5MXwAo-q8iIipn824w5kg=="
+# influx cloud server URL
+serverURL = "https://us-central1-1.gcp.cloud2.influxdata.com"
+org = "kevin.rowett@xconn-tech.com"
 
 [[probe]]
 num=1
 name="room_temp"
 # combined with dev name root for /CS used with this channel
 cs="0"
+active=true
 
 [[probe]]
 num=2
 name="probe_2"
 cs="1"
+active=false
 
 [[probe]]
 num=3
 name="probe_3"
+cs="2"
+active=false
 
 [[probe]]
 num=4
 name="probe_4"
-
-
+cs="3"
+active=false
